--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,8 @@
-<<<<<<< HEAD
 trigger:
   branches:
     include:
-      - main
-      - devops
+      - master
+      - dev
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -40,46 +39,3 @@ steps:
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
-=======
-trigger:
-  branches:
-    include:
-      - main
-      - devops
-
-pool:
-  vmImage: 'ubuntu-latest'
-
-variables:
-  buildConfiguration: 'Release'
-
-steps:
-- task: UseDotNet@2
-  displayName: 'Install .NET'
-  inputs:
-    version: '9.0.306'
-    includePreviewVersions: true
-
-- script: dotnet restore
-  displayName: 'Restore NuGet packages'
-
-- script: dotnet build --configuration $(buildConfiguration) --no-restore
-  displayName: 'Build the project'
-
-- script: dotnet test --no-build --verbosity normal
-  displayName: 'Run tests'
-
-- task: DotNetCoreCLI@2
-  displayName: 'Publish the project'
-  inputs:
-    command: 'publish'
-    publishWebProjects: true
-    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-    zipAfterPublish: true
-
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact'
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
->>>>>>> main
